[package]
name = "win-event-log"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win-event-log = { git = "https://github.com/rustysec/win-event-log-rs" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
# serde-xml-rs = "0.3.0"
quickxml_to_serde = "0.4.1"